<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/green"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginStaffActivity">

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:id="@+id/tvt_LoginStaff"
        android:gravity="center"
        android:textSize="38sp"
        android:text="@string/dang_nhap"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edt_Account"
        android:background="@color/pink"
        android:textSize="28dp"
        android:hint="@string/tai_khoan"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="80dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvt_LoginStaff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edt_Password"
        android:textSize="30sp"
        android:background="@color/pink"
        android:hint="@string/mat_khau"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_Account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_Confirm"
       app:backgroundTint="@color/pink"
        android:background="@drawable/custom_button"
        android:text="@string/xac_nhan"
        android:layout_marginTop="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageButton
        android:layout_marginLeft="5dp"
        android:id="@+id/icon_Back"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageButton
        android:layout_marginLeft="5dp"
        android:id="@+id/icon_Next"
        android:src="@drawable/ic_baseline_skip_next_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>