<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/green"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_View"
        android:background="@drawable/viewimage"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>
    <TextView
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_Login"
        android:textSize="32sp"
        android:gravity="center"
        android:text="@string/dang_nhap"
        app:layout_constraintBottom_toTopOf="@id/btn_LoginStaff"
        app:layout_constraintTop_toBottomOf="@+id/img_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_LoginStaff"
        android:text="@string/nhan_vien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        app:backgroundTint="@color/pink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Login" />

    <Button
        android:id="@+id/btn_LoginDines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/thuc_khach"
        app:backgroundTint="@color/pink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_LoginStaff" />
    <ImageButton
        android:id="@+id/icon_England"
        android:background="@drawable/iconcoanh"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="49dp"
        android:layout_height="29dp"/>
    <ImageButton
        android:id="@+id/icon_VNam"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/iconvn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/icon_England"
        android:layout_width="50dp"
        android:layout_height="30dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>